Fix 'in_range constraints missing from TOSCA template'-bug
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Change-Id: Icec2183849a8852621ec98f3ca1d94ac7c4dae31
Issue-ID: SDC-4357