@@ -19,8 +19,7 @@
  */
 package org.openecomp.sdc.be.model.tosca.constraints;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
-import java.util.List;
+import java.util.LinkedList;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -42,13 +41,9 @@ public class InRangeConstraint extends AbstractPropertyConstraint {
 
     @NonNull
     @EqualsAndHashCode.Include
-    private List<Object> inRange;
-    @JsonIgnore
-    private Comparable min;
-    @JsonIgnore
-    private Comparable max;
+    private LinkedList<Object> inRange;
 
-    public InRangeConstraint(List<Object> inRange) {
+    public InRangeConstraint(LinkedList<Object> inRange) {
         this.inRange = inRange;
     }
 
@@ -59,8 +54,8 @@ public class InRangeConstraint extends AbstractPropertyConstraint {
         if (inRange == null || inRange.size() != 2) {
             throw new ConstraintValueDoNotMatchPropertyTypeException("In range constraint must have two elements.");
         }
-        String minRawText = String.valueOf(inRange.get(0));
-        String maxRawText = String.valueOf(inRange.get(1));
+        String minRawText = String.valueOf(inRange.getFirst());
+        String maxRawText = String.valueOf(inRange.getLast());
         if (!propertyType.isValidValue(minRawText)) {
             throw new ConstraintValueDoNotMatchPropertyTypeException(
                 "Invalid min value for in range constraint [" + minRawText + "] as it does not follow the property type [" + propertyType + "]");
@@ -69,8 +64,7 @@ public class InRangeConstraint extends AbstractPropertyConstraint {
             throw new ConstraintValueDoNotMatchPropertyTypeException(
                 "Invalid max value for in range constraint [" + maxRawText + "] as it does not follow the property type [" + propertyType + "]");
         }
-        min = ConstraintUtil.convertToComparable(propertyType, minRawText);
-        max = ConstraintUtil.convertToComparable(propertyType, maxRawText);
+        inRange.replaceAll(obj -> propertyType.convert(String.valueOf(obj)));
     }
 
     @Override
@@ -78,10 +72,20 @@ public class InRangeConstraint extends AbstractPropertyConstraint {
         if (propertyValue == null) {
             throw new ConstraintViolationException("Value to check is null");
         }
-        if (!(min.getClass().isAssignableFrom(propertyValue.getClass()))) {
+        if (!(inRange.getFirst().getClass().isAssignableFrom(propertyValue.getClass()))) {
             throw new ConstraintViolationException(
-                "Value to check is not comparable to range type, value type [" + propertyValue.getClass() + "], range type [" + min.getClass() + "]");
+                "Value to check is not comparable to range type, value type [" + propertyValue.getClass() + "], range type [" + inRange.getFirst()
+                    .getClass() + "]");
         }
+        if (!(inRange.getLast().getClass().isAssignableFrom(propertyValue.getClass()))) {
+            throw new ConstraintViolationException(
+                "Value to check is not comparable to range type, value type [" + propertyValue.getClass() + "], range type [" + inRange.getLast()
+                    .getClass() + "]");
+        }
+        final ToscaType propertyType = ToscaType.getToscaType(propertyValue.getClass().getSimpleName().toLowerCase());
+        final Comparable min = ConstraintUtil.convertToComparable(propertyType, String.valueOf(inRange.getFirst()));
+        final Comparable max = ConstraintUtil.convertToComparable(propertyType, String.valueOf(inRange.getLast()));
+
         if (min.compareTo(propertyValue) > 0 || max.compareTo(propertyValue) < 0) {
             throw new ConstraintViolationException("The value [" + propertyValue + "] is out of range " + inRange);
         }
@@ -98,6 +102,8 @@ public class InRangeConstraint extends AbstractPropertyConstraint {
 
     @Override
     public String getErrorMessage(ToscaType toscaType, ConstraintFunctionalException e, String propertyName) {
+        Comparable min = ConstraintUtil.convertToComparable(toscaType, String.valueOf(inRange.getFirst()));
+        Comparable max = ConstraintUtil.convertToComparable(toscaType, String.valueOf(inRange.getLast()));
         return getErrorMessage(toscaType, e, propertyName, "%s property value must be in a range of %s", String.valueOf(min),
             String.valueOf(max));
     }
@@ -124,8 +130,6 @@ public class InRangeConstraint extends AbstractPropertyConstraint {
         ToscaType toscaType = ToscaType.getToscaType(propertyType);
         try {
             inRange.replaceAll(obj -> toscaType.convert(String.valueOf(obj)));
-            min = ConstraintUtil.convertToComparable(toscaType, String.valueOf(inRange.get(0)));
-            max = ConstraintUtil.convertToComparable(toscaType, String.valueOf(inRange.get(1)));
         } catch (Exception e) {
             throw new ConstraintValueDoNotMatchPropertyTypeException(
                 "inRange constraint has invalid values <" + inRange + "> property type is <" + propertyType + ">");
